# KNChat-server

./: .gitignore  README.md  mypy.ini  project.md  pyproject.toml
src/auth/permissions/: __init__.py
src/auth/sessions/token/: __init__.py
src/auth/user/: schemas.py
src/core/: __init__.py  config.py  cors.py  security.py
src/db/: __init__.py  _db.py  init.py  models.py
src/myapp/: main.py  router.py
src/myapp/cli/: create_new_modules.py
src/myapp/common/: api.py  errors.py
src/myapp/modules/chat/: __init__.py
src/myapp/modules/chat/api/: router.py
src/myapp/modules/chat/api/errors/: __init__.py  chat.py  friendship.py
src/myapp/modules/chat/api/routes/: __init__.py  conversations.py  friendship.py  messages.py
src/myapp/modules/chat/schemas/: __init__.py  block.py  chat_api.py  conversation.py  friendship.py  friendship_api.py  message.py
src/myapp/modules/chat/services/: __init__.py  block.py  chat_response.py  friendship.py  friendship_response.py  guards.py  pagination.py
src/myapp/modules/chat/services/conversation/: __init__.py  pagination.py  repo.py  service.py  types.py
src/myapp/modules/chat/services/friendship/: __init__.py  errors.py  pagination.py  repo.py  service.py  types.py
src/myapp/modules/chat/services/message/: __init__.py  pagination.py  repo.py  service.py  types.py
src/myapp/modules/profiles/api/routes/: __init__.py  users.py
src/myapp/modules/profiles/schemas/: __init__.py  user_api.py
src/myapp/modules/profiles/services/: __init__.py  user_lookup.py
