[project]
name = "knbchat"
version = "0.1.0"
description = "A chat application backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.133.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.11.0",
    "sqlmodel>=0.0.37",
    "uuid>=1.30",
]

[tool.fastapi]
entrypoint = "myapp.main:app"
